--- a/fundoo/fundooapp/templates/registration/base.html
+++ b/fundoo/fundooapp/templates/registration/base.html
@@ -5,7 +5,7 @@
     <title>ChatApp</title>
     <style>
         body {
-                background-image: url("/static/apple.jpg");
+                background-image: url("/static/web3.jpg");
         }
 
 </style>
